feat: add testing

--- a/test/testing.ipynb
+++ b/test/testing.ipynb
@@ -4,13 +4,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proses pre-processing selesai, file telah disimpan sebagai 'pre_processing_data.csv'\n"
+     ]
+    }
+   ],
    "source": [
+    "#step 1 preprocessing data\n",
+    "\n",
     "# Import library\n",
     "import pandas as pd\n",
     "\n",
     "# Membaca dataset dari file .tsv\n",
-    "raw_data = pd.read_csv('training_set_rel3.tsv', sep='\\t', encoding='ISO-8859-1')\n",
+    "raw_data = pd.read_csv(r'E:\\Bebeb\\NEW\\AES\\data\\asap-aes\\training_set_rel3.tsv', sep='\\t', encoding='ISO-8859-1')\n",
     "\n",
     "# Menyaring data untuk hanya mengambil essay_set dengan nilai 7\n",
     "filtered_dataset = raw_data[raw_data['essay_set'] == 7].copy()\n",
@@ -49,9 +59,28 @@
     "final_pre_processing_data = filtered_dataset[pre_processing_data]\n",
     "\n",
     "# Menyimpan data hasil pre-processing ke dalam file CSV\n",
-    "final_pre_processing_data.to_csv('data/result/pre_processing_data2.csv', index=False)\n",
+    "final_pre_processing_data.to_csv('pre_processing_data.csv', index=False)\n",
     "\n",
     "print(\"Proses pre-processing selesai, file telah disimpan sebagai 'pre_processing_data.csv'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is not available.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#step 2 modul penilaian struktur\n",
+    "\n",
+    "#import library\n"
    ]
   }
  ],
@@ -62,7 +91,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
